unpackaged/main/default/objects/litify_docs__Template__c/litify_docs__Template__c.object-meta.xml
<CustomObject>
    <description>Template for document merge</description>
    <label>Merge Template</label>
    <nameField>
        <label>Merge Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>