unpackaged/main/default/objects/litify_docs__Template__c/fields/litify_docs__Auto_Merge__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Auto_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-merge</label>
    <type>Checkbox</type>
</CustomField>