unpackaged/main/default/objects/litify_docs__Template__c/fields/litify_docs__Category__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Category__c</fullName>
    <description>Category of Template</description>
    <inlineHelpText>Category of Template</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>