unpackaged/main/default/objects/litify_docs__Template__c/fields/litify_docs__Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Folder_Path__c</fullName>
    <description>The target location of the resulting merged file within the folder structure of the record to which the resulting file will be related. Stored in JSON format.</description>
    <label>Parent Folder</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>