unpackaged/main/default/objects/litify_docs__Template__c/fields/litify_docs__Has_File__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Has_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this Template has an associated Template File.</description>
    <inlineHelpText>True if this Template has an associated Template File.</inlineHelpText>
    <label>Has File</label>
    <type>Checkbox</type>
</CustomField>