unpackaged/main/default/objects/litify_docs__Template__c/fields/litify_docs__Invocable_Template__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Invocable_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only true when all nodes for the template are hidden equals true or require no user input.</description>
    <inlineHelpText>Only true when all nodes for the template are hidden equals true or require no user input.</inlineHelpText>
    <label>Invocable Template</label>
    <type>Checkbox</type>
</CustomField>