unpackaged/main/default/objects/litify_docs__Template__c/fields/litify_docs__Merged_File_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Merged_File_Name__c</fullName>
    <label>Merged File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>