unpackaged/main/default/objects/litify_docs__Template__c/fields/litify_docs__Multi_Merge_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Multi_Merge_Object__c</fullName>
    <description>The child object that is enabled for multi merge</description>
    <label>Multi-merge Object</label>
    <length>64</length>
    <type>Text</type>
</CustomField>