unpackaged/main/default/objects/litify_docs__Template__c/fields/litify_docs__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Subcategory__c</fullName>
    <description>Subcategory of Template</description>
    <inlineHelpText>Subcategory of Template</inlineHelpText>
    <label>Subcategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>