unpackaged/main/default/objects/litify_docs__Template__c/fields/litify_docs__Template_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Template_Number__c</fullName>
    <label>Template Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>