unpackaged/main/default/objects/litify_docs__Template__c/fields/litify_docs__Type__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Type__c</fullName>
    <description>Used for template categorization.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Docx</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>